--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © <a target="_blank" href="http://www.iiwa-design.com">IIWA-Design</a> All Right Reserved</span>
+                    <span class="copyright">Copyright © <!--<a target="_blank" href="http://www.iiwa-design.com">-->IIWA-Design</a> All Right Reserved</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -399,9 +399,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="terms.html">Privacy Policy & User Terms</a>
                         </li>
                     </ul>
                 </div>
