--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <meta property="og:title" content="Keeprice 管價格">
+    <meta property="og:description" content="那些生活中的小事，Keeprice幫你記得。">
+    <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
+
+
+
     <title>Keeprice</title>
 
     <!-- Bootstrap Core CSS -->
